// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar Component ActionBar renders 1`] = `
<div>
  <div
    class="gds-action-bar primary CLASSNAME"
  >
    <div
      class="left-side"
    >
      <div
        class="back-icon"
      >
        <span>
          <button
            class="gds-button-content"
            color="reversed"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,arrow-left"
              />
            </div>
          </button>
        </span>
        <div>
          <div
            class="gds-tooltip bottom"
            style="left: -99999px; top: -99999px; opacity: 0;"
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-label"
            >
              BACKTOOLTIP
            </div>
          </div>
        </div>
      </div>
      <div
        class="title"
      >
        <h1
          class="gds-typography ellipsis align-edit"
          title="PREFIX"
        >
          PREFIX
        </h1>
        <span
          style="display: inline-flex; margin: auto; overflow: hidden;"
        >
          <span
            class="title-edit-hidden"
          >
            TITLE
          </span>
          <input
            autocomplete="off"
            class="title-edit"
            placeholder="PLACEHOLDED"
            style="display: flex; width: 0px; margin: auto;"
            type="text"
            value="TITLE"
          />
        </span>
        <div>
          <div
            class="gds-tooltip bottom"
            style="left: -99999px; top: -99999px; opacity: 0;"
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-label"
            >
              Rename
            </div>
          </div>
        </div>
        <h1
          class="gds-typography ellipsis align-edit"
        >
          - 
          ENTITYID
        </h1>
        <h1
          class="gds-typography ellipsis align-edit"
          title="SUFFIX"
        >
          SUFFIX
        </h1>
      </div>
      <div
        class="badges"
      >
        <div
          id="ICON"
        />
        <div
          id="INDICATOR"
        />
        <div
          id="STATUS"
        />
      </div>
    </div>
    <div
      class="right-side"
    >
      <div
        class="actions"
      >
        <button
          class="gds-button-content"
          color="secondary"
          data-testid="ACTION1"
          type="button"
        >
          <div
            class="button-label-container"
          >
            action1
          </div>
        </button>
      </div>
      <div
        class="separator"
      >
        <i
          class="icon"
          icon="fal,pipe"
        />
      </div>
      <div
        class="basic-actions"
      >
        <button
          class="gds-button-content"
          color="reversed"
          data-testid="BASICACTION1"
          type="button"
        >
          <div
            class="button-label-container"
          >
            basicaction1
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionBar Component ActionBar renders with actions without label, empty basicactions 1`] = `
<div>
  <div
    class="gds-action-bar"
  >
    <div
      class="left-side"
    >
      <div
        class="title"
      >
        <span
          class="title-edit-hidden"
        >
          TITLE
        </span>
        <input
          autocomplete="off"
          class="title-edit"
          readonly=""
          style="display: flex; width: 0px; margin: auto;"
          type="text"
          value="TITLE"
        />
      </div>
    </div>
    <div
      class="right-side"
    >
      <div
        class="actions"
      />
    </div>
  </div>
</div>
`;

exports[`ActionBar Component ActionBar renders without action, basicactions, icon, indicator or status 1`] = `
<div>
  <div
    class="gds-action-bar primary CLASSNAME"
  >
    <div
      class="left-side"
    >
      <div
        class="back-icon"
      >
        <span>
          <button
            class="gds-button-content"
            color="reversed"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,arrow-left"
              />
            </div>
          </button>
        </span>
        <div>
          <div
            class="gds-tooltip bottom"
            style="left: -99999px; top: -99999px; opacity: 0;"
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-label"
            >
              BACKTOOLTIP
            </div>
          </div>
        </div>
      </div>
      <div
        class="title"
      >
        <h1
          class="gds-typography ellipsis align-edit"
          title="PREFIX"
        >
          PREFIX
        </h1>
        <span
          style="display: inline-flex; margin: auto; overflow: hidden;"
        >
          <span
            class="title-edit-hidden"
          >
            TITLE
          </span>
          <input
            autocomplete="off"
            class="title-edit"
            placeholder="PLACEHOLDED"
            style="display: flex; width: 0px; margin: auto;"
            type="text"
            value="TITLE"
          />
        </span>
        <div>
          <div
            class="gds-tooltip bottom"
            style="left: -99999px; top: -99999px; opacity: 0;"
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-label"
            >
              Rename
            </div>
          </div>
        </div>
        <h1
          class="gds-typography ellipsis align-edit"
        >
          - 
          ENTITYID
        </h1>
        <h1
          class="gds-typography ellipsis align-edit"
          title="SUFFIX"
        >
          SUFFIX
        </h1>
      </div>
    </div>
    <div
      class="right-side"
    />
  </div>
</div>
`;
